sfdx-live-agent-util/main/default/objects/LiveAgent_Env__mdt/LiveAgent_Env__mdt.object-meta.xml
<CustomObject>
    <description>Live Agent config settings</description>
    <label>LiveAgent Env</label>
    <pluralLabel>LiveAgent Envs</pluralLabel>
</CustomObject>