sfdx-live-agent-util/main/default/objects/LiveAgent_Env__mdt/fields/baseLiveAgentContentURL__c.field-meta.xml
<CustomField>
    <fullName>baseLiveAgentContentURL__c</fullName>
    <label>baseLiveAgentContentURL</label>
    <type>Url</type>
</CustomField>