sfdx-live-agent-util/main/default/objects/LiveAgent_Env__mdt/fields/baseLiveAgentURL__c.field-meta.xml
<CustomField>
    <fullName>baseLiveAgentURL__c</fullName>
    <label>baseLiveAgentURL</label>
    <type>Url</type>
</CustomField>