sfdx-live-agent-util/main/default/objects/LiveAgent_Env__mdt/fields/brandURL__c.field-meta.xml
<CustomField>
    <fullName>brandURL__c</fullName>
    <label>brandURL</label>
    <type>Url</type>
</CustomField>