sfdx-live-agent-util/main/default/objects/LiveAgent_Env__mdt/fields/buttonId__c.field-meta.xml
<CustomField>
    <fullName>buttonId__c</fullName>
    <label>buttonId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>