sfdx-live-agent-util/main/default/objects/LiveAgent_Env__mdt/fields/deploymentId__c.field-meta.xml
<CustomField>
    <fullName>deploymentId__c</fullName>
    <label>deploymentId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>