sfdx-live-agent-util/main/default/objects/LiveAgent_Env__mdt/fields/eswLiveAgentDevName__c.field-meta.xml
<CustomField>
    <fullName>eswLiveAgentDevName__c</fullName>
    <label>eswLiveAgentDevName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>