sfdx-live-agent-util/main/default/objects/LiveAgent_Env__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>4</length>
    <type>Text</type>
</CustomField>